--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "react": "^17.0.1",
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.12.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
